<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/openForward"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/forwardStatus"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/mail_config"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHost"
                android:layout_width="12dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:text="@string/host"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/textHost"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPort"
                android:layout_width="12dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:textSize="15sp"
                android:text="@string/port" />

            <EditText
                android:id="@+id/textPort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="12dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:textSize="15sp"
                android:text="@string/username" />

            <EditText
                android:id="@+id/textUsername"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="12dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:textSize="15sp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="12dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:textSize="15sp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/checkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/checkConfig" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save" />


</LinearLayout>